bindings/csharp/TSF.cs


#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_note_on", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_note_on", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern int tsf_channel_note_on(IntPtr f, int channel, int key, float vel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_note_off", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_note_off", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern void tsf_channel_note_off(IntPtr f, int channel, int key);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_note_off_all", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_note_off_all", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern void tsf_channel_note_off_all(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_sounds_off_all", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_sounds_off_all", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern void tsf_channel_sounds_off_all(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_midi_control", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_midi_control", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern int tsf_channel_midi_control(IntPtr f, int channel, int controller, int control_value);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_get_preset_index", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_get_preset_index", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern int tsf_channel_get_preset_index(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_get_preset_bank", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_get_preset_bank", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern int tsf_channel_get_preset_bank(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_get_preset_number", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_get_preset_number", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern int tsf_channel_get_preset_number(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_get_pan", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_get_pan", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern float tsf_channel_get_pan(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_get_volume", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_get_volume", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern float tsf_channel_get_volume(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_get_pitchwheel", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_get_pitchwheel", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern int tsf_channel_get_pitchwheel(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_get_pitchrange", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_get_pitchrange", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern float tsf_channel_get_pitchrange(IntPtr f, int channel);

#if __IOS__
[DllImport("@rpath/tsf.framework/tsf", EntryPoint = "tsf_channel_get_tuning", CallingConvention = CallingConvention.Cdecl)]
#else
[DllImport("tsf", EntryPoint = "tsf_channel_get_tuning", CallingConvention = CallingConvention.Cdecl)]
#endif
public static extern float tsf_channel_get_tuning(IntPtr f, int channel);

}
}
